src/include/dart_api.h


typedef struct _Dart_Handle* Dart_Handle;
typedef int64_t Dart_Port;
typedef struct {
  int64_t port_id;
  int64_t origin_id;
} Dart_PortEx;
#define ILLEGAL_PORT ((Dart_Port)0)
DART_EXPORT DART_API_WARN_UNUSED_RESULT Dart_Handle Dart_HandleMessage(void);
DART_EXPORT bool Dart_HandleServiceMessages(void);
DART_EXPORT bool Dart_HasServiceMessages(void);
DART_EXPORT DART_API_WARN_UNUSED_RESULT Dart_Handle Dart_RunLoop(void);
DART_EXPORT DART_API_WARN_UNUSED_RESULT bool Dart_RunLoopAsync(
    bool errors_are_fatal,
    Dart_Port on_error_port,
    Dart_Port on_exit_port,
    char** error);
DART_EXPORT Dart_Port Dart_GetMainPortId(void);
DART_EXPORT bool Dart_HasLivePorts(void);
DART_EXPORT bool Dart_Post(Dart_Port port_id, Dart_Handle object);
DART_EXPORT Dart_Handle Dart_NewSendPort(Dart_Port port_id);
DART_EXPORT Dart_Handle Dart_NewSendPortEx(Dart_PortEx portex_id);
DART_EXPORT Dart_Handle Dart_SendPortGetId(Dart_Handle port,
                                           Dart_Port* port_id);
DART_EXPORT Dart_Handle Dart_SendPortGetIdEx(Dart_Handle port,
                                             Dart_PortEx* portex_id);
DART_EXPORT void Dart_SetCurrentThreadOwnsIsolate(void);
DART_EXPORT bool Dart_GetCurrentThreadOwnsIsolate(Dart_Port port);
DART_EXPORT void Dart_EnterScope(void);
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT uint8_t* Dart_ScopeAllocate(intptr_t size);
DART_EXPORT Dart_Handle Dart_Null(void);